# notes-app

./: .gitignore  pyproject.toml
migrations/versions/: e008f5ed48c4_initial_migration.py
src/: __init__.py  config.py  login_manager.py  utils.py
src/commands/: create_db.py
src/forms/: note.py  user.py
src/models/: note.py  user.py
src/static/css/: style.css
src/templates/: base.html
src/templates/auth/: login.html  registration.html
src/templates/errors/: 404.html  500.html
src/templates/home/: index.html
src/templates/includes/: navbar.html
src/templates/notes/: create.html  index.html  list.html  update.html
src/templates/utils/: _flash_error.html  _form_error.html
src/views/: __init__.py  auth.py  errors.py  home.py  notes.py
tests/: auth_test.py  conftest.py  home_test.py  note_test.py  utils.py
