[tool.poetry]
name = "notes-app"
version = "0.1.0"
description = ""
authors = ["dominik24c <dominik24c@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-Login = "^0.5.0"
Flask-WTF = "^1.0.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

